# build

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  exit_err
.ci/: test-cover
.github/workflows/: cargo-publish.yml  test-and-lint.yml
corpus/: index.json
mocks/: echo.rs  emit.rs  exit_err.rs  pg_config.rs
src/: lib.rs  tests.rs  writer.rs
src/api/: mod.rs  tests.rs
src/error/: mod.rs
src/exec/: color.rs  mod.rs  tests.rs
src/line/: mod.rs  tests.rs
src/pg_config/: mod.rs  tests.rs
src/pgrx/: mod.rs  tests.rs
src/pgxs/: mod.rs  tests.rs
src/pipeline/: mod.rs  tests.rs
